<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp"
              tools:context=".fragment.FragmentCreate">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/str_secure_mock"/>

        <Switch
                android:id="@+id/switch_secure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Spinner
                android:id="@+id/spinner_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/httpMethodList"/>

        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_path"/>

    </LinearLayout>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/input_mock_body"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:hint="@string/str_input_mock"/>

    <Button
            android:id="@+id/btn_send_mock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius"
            android:textColor="@color/colorAccent"
            android:text="@string/str_send"/>

</LinearLayout>