<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp"
              tools:context=".fragment.FragmentControl">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

        <Spinner
                android:id="@+id/spinner_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:entries="@array/utilList"/>

        <Button
                android:id="@+id/btn_send_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@drawable/button_radius"
                android:textColor="@color/colorAccent"
                android:text="@string/str_send"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/block_param_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_format"/>

            <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_format_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:entries="@array/formatList"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_type"/>

            <Spinner
                    android:id="@+id/spinner_type_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:entries="@array/typeList"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/block_body_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_path"/>

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_path_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/formatList"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_method"/>

            <Spinner
                    android:id="@+id/spinner_method_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:entries="@array/httpMethodList"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <TextView
                android:id="@+id/txt_response_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="15"
                android:singleLine="false"
                android:scrollHorizontally="true"/>

    </ScrollView>


</LinearLayout>